# cpp-rest-api-core

./: .appveyor.yml  .codacy.yml  .codecov.yml  .gitattributes  .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  conanfile.py  deploy.sh  vs2022.conanprofile
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  NewtonDebug.properties  NewtonRelease.properties  Release.jenkinsfile  SnowDebug.properties  SnowRelease.properties
ci/scripts/: build_docs.sh  deploy.sh
cmake/: CodeCoverage.cmake  ConfigureGoogleTest.cmake  GitCloneRepository.cmake
src/RESTAPICore/: CMakeLists.txt  stdafx.h
src/RESTAPICore/Endpoint/: ClaimConstants.h  EndpointRequestAuthorizationClaims.cpp  EndpointRequestAuthorizationClaims.h  EndpointRequestData.cpp  EndpointRequestData.h  EndpointRequestParams.cpp  EndpointRequestParams.h  IEndpoint.h
src/RESTAPICore/RouteAccess/: EpochTimeService.cpp  EpochTimeService.h  FreeRouteAccessValidator.cpp  FreeRouteAccessValidator.h  IEpochTimeService.h  IRouteAccessValidator.h  IUserRoleService.h  TokenExpirationAccessValidator.cpp  TokenExpirationAccessValidator.h  UserRoleRouteAccessValidator.cpp  UserRoleRouteAccessValidator.h
src/RESTAPICore/Router/: AuthorizationDataBuilder.cpp  AuthorizationDataBuilder.h  IAuthorizationDataBuilder.h  IRoute.h  IRoutesFactory.h  Route.cpp  Route.h  RouteFragment.cpp  RouteFragment.h  Router.cpp  Router.h  RoutesFactory.cpp  RoutesFactory.h
test/RESTAPICoreTest/: CMakeLists.txt  RESTAPICoreTest.cpp  stdafx.h
test/RESTAPICoreTest/Tests/: RouteTest.cpp  RouterComponentTest.cpp
test/RESTAPICoreTest/Tests/RouteAccess/: EpochTimeServiceTest.cpp  TokenExpirationAccessValidatorTest.cpp  UserRoleRouteAccessValidatorTest.cpp
test/RESTAPICoreTest/Tests/Router/: AuthorizationDataBuilderTest.cpp  RouteTest.cpp  RouterTest.cpp
test/RESTAPICoreTestUtilities/: CMakeLists.txt  conanfile.py  stdafx.h
test/RESTAPICoreTestUtilities/Builders/: EndpointRequestParamsBuilder.cpp  EndpointRequestParamsBuilder.h
test/RESTAPICoreTestUtilities/Comparators/: EndpointRequestAuthorizationClaimsComparator.cpp  EndpointRequestDataComparator.cpp  EndpointRequestParamsComparator.cpp
test/RESTAPICoreTestUtilities/Mocks/Endpoint/: MockEndpoint.cpp  MockEndpoint.h
test/RESTAPICoreTestUtilities/Mocks/RouteAccess/: MockEpochTimeService.cpp  MockEpochTimeService.h  MockRouteAccessValidator.cpp  MockRouteAccessValidator.h  MockUserRoleService.cpp  MockUserRoleService.h
test/RESTAPICoreTestUtilities/Mocks/Router/: MockRoute.cpp  MockRoute.h  MockRoutesFactory.cpp  MockRoutesFactory.h
test/RESTAPICoreTestUtilities/Stubs/: StubEpochTimeService.cpp  StubEpochTimeService.h
test/RESTAPICoreTestUtilities/test_package/: CMakeLists.txt  RESTAPICoreTestUtilitiesExample.cpp  conanfile.py
test_package/: CMakeLists.txt  RESTAPICoreExample.cpp  conanfile.py
